--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -15,10 +15,13 @@
     <div class="content">
       <nav>
         <ul>
-          <li><a href="/docs/rectangle.md">File 1</a></li>
-          <li><a href="/docs/file2.md">File 2</a></li>
-          <li><a href="/docs/file3.md">File 3</a></li>
-          <!-- Add more files as needed -->
+          <li><a href="/">Getting started</a></li>
+          <li><a href="/shapes">Shapes</a></li>
+          <li>
+            <ul>
+              <li><a href="/rectangle">Rectangle</a></li>
+            </ul>
+          </li>
         </ul>
       </nav>
       <main>
