--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -15,11 +15,11 @@
     <div class="content">
       <nav>
         <ul>
-          <li><a href="{{ '/' | relative_url }}">Getting started</a></li>
-          <li><a href="{{ '/shapes' | relative_url }}">Shapes</a></li>
+          <li><a href="{{ '/docs' | relative_url }}">Getting started</a></li>
+          <li><a href="{{ '/docs/shapes' | relative_url }}">Shapes</a></li>
           <li>
             <ul>
-              <li><a href="{{ '/rectangle' | relative_url }}">Rectangle</a></li>
+              <li><a href="{{ '/docs/rectangle' | relative_url }}">Rectangle</a></li>
             </ul>
           </li>
         </ul>
