--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -41,6 +41,10 @@
     .breadcrumb-item a {
       text-decoration: none;
     }
+
+    main h2 {
+      border-bottom: 1px solid #e6e6e6;
+    }
   </style>
 </head>
 <body>
@@ -85,8 +89,10 @@
             <li class="breadcrumb-item active" aria-current="page">Data</li>
           </ol>
         </nav>
-        <h1>{{ page.title }}</h1>
-        {{ content }}
+        <h1>{{ site.title }}</h1>
+        <div class="content">
+          {{ content }}
+        </div>
       </div>
     </div>
   </main>
