--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -89,7 +89,7 @@
             <li class="breadcrumb-item active" aria-current="page">Data</li>
           </ol>
         </nav>
-        <h1>{{ site.title }}</h1>
+        <h1>{{ page.title }}</h1>
         <div class="content">
           {{ content }}
         </div>
