--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -90,16 +90,13 @@
         </nav>
         <h1>{{ page.title }}</h1>
         <div class="content">
-          {{ content | remove_first: content | split: '</ul>' | first | append: '</ul>' }}
+          {{ content }}
         </div>
       </div>
 
       <aside class="col-2">
         <div class="sticky-top">
-          <!-- Extract and display the first <ul> -->
-          <ul>
-            {{ content | split: '</ul>' | first | prepend: '<ul>' | append: '</ul>' }}
-          </ul>
+
         </div>
       </aside>
     </div>
