Add sticky columns

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -6,7 +6,8 @@
   <title>CanvasPainter - {{ page.title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="{{ '/assets/css/bootstrap.min.css' | relative_url }}">
+  <!--link rel="stylesheet" href="{{ '/assets/css/bootstrap.min.css' | relative_url }}"-->
+  <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 
   <style>
@@ -17,6 +18,7 @@
     }
 
     header {
+      background-color: #fafafa;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       padding: 5pt 0;
     }
@@ -34,7 +36,7 @@
 
     nav.breadcrumb {
       --bs-breadcrumb-divider: '>';
-      margin: 9px 0 0 0;
+      margin: 15px 0 0 0;
       padding: 0;
     }
 
@@ -45,10 +47,17 @@
     main h2 {
       border-bottom: 1px solid #e6e6e6;
     }
+
+    .sticky-column {
+      position: -webkit-sticky;
+      position: sticky;
+      top: 60px;
+    }
   </style>
 </head>
 <body>
-  <header>
+
+  <header class="sticky-top">
     <div class="container">
       <div class="row">
         <div class="col d-flex align-items-center">
@@ -65,47 +74,56 @@
       </div>
     </div>
   </header>
-  <main class="container py-4">
+
+  <div class="container-fluid">
     <div class="row">
-      <nav class="col-2 main-menu">
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            <a class="nav-link" href="{{ '/' | relative_url }}">Getting started</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ '/shapes' | relative_url }}">Shapes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ '/rectangle' | relative_url }}">Rectangle</a>
-          </li>
-        </ul>
-      </nav>
 
-      <div class="col-8">
-        <nav class="breadcrumb" aria-label="breadcrumb">
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">User Guide</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Data</li>
-          </ol>
-        </nav>
-        <h1>{{ page.title }}</h1>
-        <div class="content">
-          {% assign parts = content | split: "<!-- toc-end -->" %}
-          {% assign toc = parts[0] %}
-          {% assign main_content = parts[1] %}
-
-          {{ main_content }}
+      <div class="col-2">
+        <div class="sticky-column">
+          <nav class="main-menu"></nav>
+            <ul class="nav flex-column">
+              <li class="nav-item">
+                <a class="nav-link" href="{{ '/' | relative_url }}">Getting started</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ '/shapes' | relative_url }}">Shapes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ '/rectangle' | relative_url }}">Rectangle</a>
+              </li>
+            </ul>
+          </nav>
         </div>
       </div>
 
-      <aside class="col-2">
-        <div class="sticky-top">
+      <div class="col-8">
+        <main>
+          <nav class="breadcrumb" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="#">User Guide</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Data</li>
+            </ol>
+          </nav>
+          <h1>{{ page.title }}</h1>
+          <div class="content">
+            {{ toc }}
+          </div>
+        </main>
+      </div>
+
+      <div class="col-2">
+        <aside class="sticky-column bg-light p-3">
+          <div><b>On this page</b></div>
           {{ toc }}
-        </div>
-      </aside>
+        </aside>
+      </div>
+
     </div>
-  </main>
+  </div>
+
+
 
   <script src="{{ '/assets/js/bootstrap.bundle.min.js' | relative_url }}"></script>
+  <script src="../assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
