--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -6,8 +6,7 @@
   <title>CanvasPainter - {{ page.title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!--link rel="stylesheet" href="{{ '/assets/css/bootstrap.min.css' | relative_url }}"-->
-  <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="{{ '/assets/css/bootstrap.min.css' | relative_url }}">
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 
   <style>
@@ -124,6 +123,5 @@
 
 
   <script src="{{ '/assets/js/bootstrap.bundle.min.js' | relative_url }}"></script>
-  <script src="../assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
