--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -12,6 +12,7 @@
   <style>
     body {
       background-color: #fafafa;
+      color: #334455;
       font-family: sans-serif;
       font-size: 12pt;
     }
