Add code highlighting

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -18,6 +18,10 @@
       font-size: 12pt;
     }
 
+    h1, h2, h3, h4, h5, h6 {
+      color: black;
+    }
+
     header {
       background-color: #fafafa;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
