--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -143,5 +143,6 @@
   </div>
 
   <script src="{{ '/assets/js/bootstrap.bundle.min.js' | relative_url }}"></script>
+  <script src="{{ '/assets/js/prism.js' | relative_url }}"></script>
 </body>
 </html>
