--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -63,6 +63,10 @@
       border-bottom: 1px solid #e6e6e6;
     }
 
+    .on-this-page div {
+      padding-left: 2em;
+    }
+
     .on-this-page ul {
       list-style-type: none;
     }
