--- a/website/src/pages/demo.module.css
+++ b/website/src/pages/demo.module.css
@@ -7,7 +7,6 @@
   width: 300px;
   overflow-y: auto;
   padding: 1rem;
-  border-right: 1px solid #eaeaea;
   background-color: var(--ifm-background-color);
   position: sticky;
   top: var(--ifm-navbar-height);
@@ -19,4 +18,6 @@
   flex: 1;
   padding: 2rem;
   overflow-y: auto;
+  border-left: 1px solid #eaeaea;
+  border-right: 1px solid #eaeaea;
 }
