Remove CanvasDisplay component

--- a/website/src/pages/demo.module.css
+++ b/website/src/pages/demo.module.css
@@ -21,3 +21,8 @@
   border-left: 1px solid #eaeaea;
   border-right: 1px solid #eaeaea;
 }
+
+.canvas {
+  border: 1px solid #eaeaea;
+  border-radius: 4px;
+}
