--- a/website/src/pages/index.module.css
+++ b/website/src/pages/index.module.css
@@ -25,4 +25,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 1rem;
+}
+
+.buttons .button {
+  flex: 1;
+  max-width: 200px;
 }
