Add css for demo

--- a/website/src/css/Configurator.module.css
+++ b/website/src/css/Configurator.module.css
@@ -71,3 +71,12 @@ hr {
 .h4Header {
   font-size: var(--ifm-h4-font-size);
 }
+
+.buttons {
+}
+
+.buttons .button {
+  color: white;
+  margin-bottom: 5pt;
+  width: 100%;
+}
